created register page with script and style. No backend for now

--- a/test1.html
+++ b/test1.html
@@ -2,12 +2,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>Заглавие</title>
-        <script src="./mainScript.js" defer></script>
-        <link href="./style.css" rel="stylesheet" />
+        <script src="./scripts/mainScript.js" defer></script>
+        <link href="./styles/style.css" rel="stylesheet" />
     </head>
     <body>
-        <asdf>1111</asdf>
-        <button id="userInfo">Виж потребителските данни</button>
+        <div id="my-relative-element">
+            <button id="userInfo">Виж потребителските данни</button>
+        </div>
         <div id="userData"></div>
         <form method="POST" action="./test1.php">
             <label for="course-title"> Course Title </label>
