added success and error handling for register user

--- a/register.html
+++ b/register.html
@@ -33,6 +33,7 @@
             </form>
             
             <div id="error-message"></div>
+            <div id="success-message"></div>
         </div>
 
     </body>
