--- a/users.html
+++ b/users.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Списък на потребителите</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="./scripts/users.js" defer></script>
         <link href="./styles/users.css" rel="stylesheet" />
     </head>
